@@ -65,5 +65,5 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "version": "1.8.1-44"
+    "version": "1.8.1-45"
 }
