@@ -350,10 +350,25 @@ function test_ErrorBuilder() {
     assert.ok(builder.errors === 2, name + 'transform()');
 };
 
+function test_TransformBuilder() {
+
+    TransformBuilder.addTransform('xml', function(obj, resume) {
+        var xml = '';
+        Object.keys(obj).forEach(function(key) {
+            xml += '<' + key + '>' + obj[key] + '</' + key + '>';
+        });
+        return xml;
+    }, true);
+
+    assert.ok(TransformBuilder.transform('xml', { name: 'Peter' }) === '<name>Peter</name>', 'TransformBuilder problem');
+    assert.ok(TransformBuilder.transform({ name: 'Peter' }) === '<name>Peter</name>', 'TransformBuilder problem (default)');
+}
+
 test_PageBuilder();
 test_UrlBuilder();
 test_Schema();
 test_ErrorBuilder();
+test_TransformBuilder();
 
 console.log('================================================');
 console.log('success - OK');
