@@ -30,6 +30,7 @@ BETA ======= 1.8.1
 - added: CSS variables likes sass, example: `$color: red;`
 - added: modificators for dynamic modification before compilation: views, styles and scripts
 - added: ObjectBuilder
+- added: TransformBuilder
 - added: F.load(debug, load_types, [path]);
 - added: F.isWorker (is true when is called F.load())
 - added: F.isCluster (is true when the framework is running in the cluster)
